@startuml Diagrama_Clases_Biblioteca

skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

class models.Author {
    - id : String
    - name : String
    - nationality : String
    - birthYear : LocalDate
    - deathYear : LocalDate
    --
    + models.Author(id, name, nationality, birthYear, deathYear)
    + getId() : String
    + setId(id : String) : void
    + getName() : String
    + setName(name : String) : void
    + getNationality() : String
    + setNationality(nationality : String) : void
    + getBirthYear() : LocalDate
    + setBirthYear(birthYear : LocalDate) : void
    + getDeathYear() : LocalDate
    + setDeathYear(deathYear : LocalDate) : void
}

class models.Genre {
    - id : String
    - name : String
    - description : String
    --
    + models.Genre(id, name, description)
    + getId() : String
    + setId(id : String) : void
    + getName() : String
    + setName(name : String) : void
    + getDescription() : String
    + setDescription(description : String) : void
}

class models.Book {
    - id : String
    - isbn : String
    - title : String
    - publicationYear : Integer
    - author : models.Author
    - genreList : List<models.Genre>
    --
    + models.Book(id, isbn, title, publicationYear, author, genreList)
    + getId() : String
    + setId(id : String) : void
    + getIsbn() : String
    + setIsbn(isbn : String) : void
    + getTitle() : String
    + setTitle(title : String) : void
    + getPublicationYear() : Integer
    + setPublicationYear(publicationYear : Integer) : void
    + getAuthor() : models.Author
    + setAuthor(author : models.Author) : void
    + getGenreList() : List<models.Genre>
    + setGenreList(genreList : List<models.Genre>) : void
}

class models.Copy {
    - id : String
    - book : models.Book
    --
    + models.Copy(id, book)
    + getId() : String
    + setId(id : String) : void
    + getBook() : models.Book
    + setBook(book : models.Book) : void
}

class models.Member {
    - id : String
    - name : String
    - email : String
    - phone : String
    --
    + models.Member(id, name, email, phone)
    + getId() : String
    + setId(id : String) : void
    + getName() : String
    + setName(name : String) : void
    + getEmail() : String
    + setEmail(email : String) : void
    + getPhone() : String
    + setPhone(phone : String) : void
}

class models.Loan {
    - id : String
    - loanDate : LocalDate
    - dueDate : LocalDate
    - returnDate : LocalDate
    - member : models.Member
    - copyList : List<models.Copy>
    --
    + models.Loan(id, loanDate, dueDate, returnDate, member, copyList)
    + getId() : String
    + setId(id : String) : void
    + getLoanDate() : LocalDate
    + setLoanDate(loanDate : LocalDate) : void
    + getDueDate() : LocalDate
    + setDueDate(dueDate : LocalDate) : void
    + getReturnDate() : LocalDate
    + setReturnDate(returnDate : LocalDate) : void
    + getMember() : models.Member
    + setMember(member : models.Member) : void
    + getCopyList() : List<models.Copy>
    + setCopyList(copyList : List<models.Copy>) : void
}

' Relaciones
models.Author "1" <-- "*" models.Book : tiene
models.Genre "*" <--o "*" models.Book : pertenece
models.Book "1" <-- "*" models.Copy : es copia de
models.Member "1" <-- "*" models.Loan : realiza
models.Copy "*" o--o "*" models.Loan : contiene

@enduml
